logs/django-schedule-frinat.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/django_schedule_frinat-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/schedule'...
Listing './lib/python3.5/site-packages/schedule/conf'...
Listing './lib/python3.5/site-packages/schedule/feeds'...
Listing './lib/python3.5/site-packages/schedule/management'...
Listing './lib/python3.5/site-packages/schedule/management/commands'...
Compiling './lib/python3.5/site-packages/schedule/management/commands/load_example_data.py'...
***   File "./lib/python3.5/site-packages/schedule/management/commands/load_example_data.py", line 14
    print "checking for existing data ..."
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/schedule/management/commands/load_sample_data.py'...
***   File "./lib/python3.5/site-packages/schedule/management/commands/load_sample_data.py", line 14
    print "checking for existing data ..."
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/schedule/models'...
Compiling './lib/python3.5/site-packages/schedule/models/calendars.py'...
***   File "./lib/python3.5/site-packages/schedule/models/calendars.py", line 58
    raise Calendar.DoesNotExist, "Calendar does not exist."
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/schedule/models/events.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (events.py, line 42)
Listing './lib/python3.5/site-packages/schedule/templates'...
Listing './lib/python3.5/site-packages/schedule/templates/profiles'...
Listing './lib/python3.5/site-packages/schedule/templates/schedule'...
Listing './lib/python3.5/site-packages/schedule/templatetags'...
Compiling './lib/python3.5/site-packages/schedule/templatetags/scheduletags.py'...
***   File "./lib/python3.5/site-packages/schedule/templatetags/scheduletags.py", line 85
    print context['edit_occurrence']
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/schedule/tests'...
Compiling './lib/python3.5/site-packages/schedule/tests/test_rule.py'...
***   File "./lib/python3.5/site-packages/schedule/tests/test_rule.py", line 59
    print "Rule", kw
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/vobject'...
Listing './lib/python3.5/site-packages/vobject-0.9.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
